--- a/cargame.html
+++ b/cargame.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Car Game</title>
     <style>
+        body{
+            font-family: 'Noto Sans TC', sans-serif;
+        }
         #game {
             position: absolute;
             top: 0;
